package com.example.ex06.ex1;

public class Motorcycle extends Vehicle
{
    @Override
    public void start()
    {
        System.out.println("broom broom");
    }
    @Override
    public void stop()
    {
        System.out.println("grrrrrr");
    }

    @Override
    public void accelerate()
    {
        System.out.println("vroom vroom!");

    }
}

